# clash-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
.github/: cliff.toml
.github/workflows/: ci.yml
app/: build.gradle.kts
core/: build.gradle.kts
gradle/: libs.versions.toml
uniffi/: Cargo.toml
uniffi/.cargo/: config.toml
uniffi/clash-android-ffi/: Cargo.toml
uniffi/clash-android-ffi/src/: controller.rs  lib.rs  log.rs  util.rs
