[package]
name = "clash-android-ffi"
version.workspace = true
edition.workspace = true

## https://github.com/matrix-org/matrix-rust-sdk/blob/main/bindings/matrix-sdk-ffi/Cargo.toml

[lib]
crate-type = ["cdylib"]

[features]
ffi-trace = ["uniffi/ffi-trace"]
jemallocator = ["dep:tikv-jemallocator"]

[dependencies]
uniffi.workspace = true

eyre = "0.6"
tokio = "1"
async-compat.workspace = true
once_cell = "1"

# Logging
tracing = "0.1"
tracing-error = "0.2"
time = { version = "0.3", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"]}
paranoid-android = "0.2"
color-eyre = "0.6"
bytes = "1"

ipnet = "2"
jni = "0.22"
url = "2"

# HTTP client dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
http-body-util = "0.1"
urlencoding = "2"

rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
tokio-stream = "0.1"
# Memory allocator
tikv-jemallocator = { version = "0.6", optional = true }
rustls-platform-verifier = "0.6.2" # sync with gradle/libs.versions.toml
tempfile = "3"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9"

hyper-http-proxy = { version = "1", default-features = false, features = ["rustls-tls-webpki-roots"] }
hyper-rustls = { version = "0.27", features = ["rustls-platform-verifier", "http1", "tls12", "logging", "aws-lc-rs"] }
webpki-roots = "1"

# Pin pkcs5 to avoid breaking rename in 0.8.0 final (recommended → generate_recommended)
pkcs5 = "=0.8.0-rc.13"

[dependencies.clash-lib]
package = "clash-lib"
branch = "master"
git = "https://github.com/Watfaq/clash-rs.git"
# path = "../../../clash-rs/clash-lib"
features = [
    "tuic",
    "shadowquic",
    "shadowsocks",
    "tun",
    "wireguard",
    "aws-lc-rs"
]
default-features = false

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

